@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.github.prologdb</groupId>
         <artifactId>runtime</artifactId>
-        <version>1.0.0-RC2</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>runtime-core</artifactId>
@@ -26,27 +26,24 @@
             <groupId>io.kotlintest</groupId>
             <artifactId>kotlintest</artifactId>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mockito</groupId>
+                    <artifactId>mockito-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-reflect</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.mockk</groupId>
+            <artifactId>mockk</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray.kotlin.eap</id>
-            <name>Bintray Kotlin 1.2 EAP Repository</name>
-            <url>http://dl.bintray.com/kotlin/kotlin-eap-1.2</url>
-        </repository>
-    </repositories>
 
     <build>
         <sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -73,8 +70,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
-                    <experimentalCoroutines>enable</experimentalCoroutines>
+                    <jvmTarget>11</jvmTarget>
                 </configuration>
             </plugin>
             <plugin>
@@ -93,6 +89,14 @@
             <plugin>
                 <groupId>org.jetbrains.dokka</groupId>
                 <artifactId>dokka-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Djdk.attach.allowAttachSelf=true</argLine>
+                    <forkMode>once</forkMode>
+                </configuration>
             </plugin>
         </plugins>
     </build>
